# EditSync

./: .git-blame-ignore-revs  .gitignore  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile-collab.dockerignore  LICENSE-AGPL  LICENSE-APACHE  LICENSE-GPL  README.md  compose.yml  docker-compose.sql  flake.nix  typos.toml
.cloudflare/: README.md
.editsync/: settings.json
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/extension_api/src/: extension_api.rs  http_client.rs  settings.rs
crates/extension_api/wit/since_v0.0.1/: extension.wit
crates/extension_api/wit/since_v0.0.4/: extension.wit
crates/extension_api/wit/since_v0.0.6/: extension.wit
crates/extension_api/wit/since_v0.1.0/: extension.wit  nodejs.wit
crates/extension_api/wit/since_v0.2.0/: extension.wit  github.wit
crates/gpui_macros/: Cargo.toml
crates/gpui_macros/src/: styles.rs  test.rs
docs/: README.md  book.toml
extensions/: EXTRACTION.md  README.md
legal/: privacy-policy.md  subprocessors.md  terms.md  third-party-terms.md
nix/: build.nix  shell.nix
script/: build-docker  bump-editsync-minor-versions  bump-editsync-patch-version  bundle-linux  bundle-mac  collab-flamegraph  crate-dep-graph  create-migration  deploy-postgrest  determine-release-channel  draft-release-notes  drop-test-dbs  editsync-local  generate-licenses  generate-licenses-csv  get-preview-channel-changes  get-pull-requests-since  get-release-notes-since  get-released-version  histogram  install-linux  install.sh  kube-shell  prompts  randomieditsync-test-ci  reset_db  (+9 more)
(+721 files in other folders)
