[package]
name = "editsync_extension_api"
version = "0.2.0"
description = "APIs for creating Editsync extensions in Rust"
repository = "https://github.com/khulnasoft/editsync"
documentation = "https://docs.rs/editsync_extension_api"
keywords = ["editsync", "extension"]
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/extension_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.22"

[package.metadata.component]
target = { path = "wit" }
