[package]
name = "gpui_macros"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_macros.rs"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "1.0.109", features = ["full", "extra-traits"] }
